<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TravelOrderBaseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_number_and_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="PN-28716 / 22.12.2019"/>

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:id="@+id/tv_firm_title_base_fragment"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            tools:text="@string/firm_headquarters"/>-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_firm_base_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            tools:text="Emigma"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_firm_address_base_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            tools:text="Ankaranska cesta 5a 6000 koper-capodistria"/>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/til_firm"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_firm_base_fragment"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/firm_headquarters"-->
<!--                tools:text="Emigma, Ankaranska cesta 5a 6000 koper-capodistria"/>-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginTop="8dp">-->

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driver"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_driver_workplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                tools:text="Janez Novak / Programer"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_driver_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            tools:text="Pristaniška ulica 22, 6000 Koper-Capodistria"/>

<!--        </LinearLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/til_workplace"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_workplace_base_fragment"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/workplace"-->
<!--                tools:text="Programer"/>-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/til_address"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_address_base_fragment"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/home_address"-->
<!--                tools:text="Pristaniška12, Koper-Capodistria"/>-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_vehicle_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rout"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_vehicle_sender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="bottom">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_departure_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="22.10.2019/18:33"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_calendar_departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/ic_calendar_clock"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_location_from"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="start"
                tools:text="Koper-Capodistria">
                <requestFocus/>
            </androidx.appcompat.widget.AppCompatEditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="bottom">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_arrival_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="22.10.2019/18:33"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_calendar_arrival"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/ic_calendar_clock"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_location_to"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="4dp"
                tools:text="Ljubljana"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_duration_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            tools:text="1h 30 min"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="1h 30 min"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_purpose_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_purpose_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/purpose_description" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:text="@string/strt_km"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_start_km"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:text="22156"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:text="@string/end_km"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_end_km"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:text="22302"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_single_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/start_trip"/>

    </LinearLayout>

</ScrollView>